fix: dark mode css

--- a/src/components/atoms/BtxButton/BtxButton.css
+++ b/src/components/atoms/BtxButton/BtxButton.css
@@ -29,7 +29,7 @@
 }
 
 .btx-button--secondary {
-  color: #333;
+  color: var(--text-color-primary);
   background-color: transparent;
   box-shadow: rgba(0, 0, 0, 0.15) 0 0 0 1px inset;
 }
