--- a/src/components/atoms/BtxHeading/BtxHeading.css
+++ b/src/components/atoms/BtxHeading/BtxHeading.css
@@ -16,7 +16,7 @@
 }
 
 .btx-heading--secondary {
-  color: #333;
+  color: var(--text-color-primary);
   background-color: transparent;
   /* box-shadow: rgba(0, 0, 0, 0.15) 0 0 0 1px inset; */
 }
